# okscada

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  configure.ac
bindings/: Makefile.am
bindings/perl/: Log.xs  MANIFEST  META.yml  Makefile.PL.in  Optikus.xs  README  Watch.xs  optikus-perl.h  ppport.h  test.sh
bindings/perl/lib/Optikus/: CmdLine.pm  Ini.pm  Log.pm  Optikus.pm  Pretty.pm  Utils.pm  Watch.pm
bindings/perl/t/: test01log.t  test02watch.t  test03subj.t  test04msg.t  test05imp.t
config/: gwqt.m4
data/: Makefile.am
data/etc/: displays.lst  offnominals.lst  varalias.lst
data/forms/: offnom.oxf  root.oxf  service.oxf
deprecated/doc/: optikus.odt
deprecated/oslayer/: Makefile.am  conf-os.h  misc-ttb.c  os-linux.c  os-solaris.c  os-vxworks.c  test00-osirq.c  test00-ostask.c  ttb.h
deprecated/pforms/: Makefile.am  cmsg.hash  cmsg.lst  opdock  opecho  opedit  opforms  oplogs  opmap  opmsg  opscreens
deprecated/pforms/perl/: Changes  MANIFEST  Makefile.PL  README
deprecated/pforms/perl/lib/Optikus/Canvas/: DataWidget.pm  TimerWidget.pm  Util.pm  Widget.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/: Anim.pm  Bar.pm  Control.pm  Curve.pm  Custom.pm  LED.pm  Label.pm  ManoMeter.pm  Meter.pm  MultiString.pm  Pixmap.pm  Range.pm  String.pm  Toggle.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/Control/: Link.pm  Offnominal.pm  Runner.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/Custom/: SolArray.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/Meter/: BigTank.pm  RoundTank.pm  SmallTank.pm  ThermoMeter.pm  Volume.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/Range/: Dial.pm  Ruler.pm
deprecated/pforms/perl/lib/Optikus/Canvas/Widget/Toggle/: Button.pm  Switch.pm
deprecated/pforms/perl/lib/Optikus/Forms/: Util.pm  Widget.pm  WidgetActive.pm  WidgetPeriodic.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/: Anim.pm  Bar.pm  Control.pm  Curve.pm  Custom.pm  LED.pm  Label.pm  ManoMeter.pm  Meter.pm  MultiString.pm  Pixmap.pm  Range.pm  String.pm  Toggle.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/Control/: FormLink.pm  Offnominal.pm  Runner.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/Custom/: SolArray.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/Meter/: BigTank.pm  RoundTank.pm  SmallTank.pm  ThermoMeter.pm  Volume.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/Range/: Dial.pm  Ruler.pm
deprecated/pforms/perl/lib/Optikus/Forms/Widget/Toggle/: Button.pm  Switch.pm
deprecated/pforms/themes/simple/: gtkrc
deprecated/see/: Makefile.am  gtkrc  see-gtk1.c  see-icons.c  see-priv.h  see-proper1.c
doc/: Makefile.am  lib-reference.txt  ohubd.1  ohubd.1.txt  oscan.1  oscan.1.txt  owatchAddAliveHandler.3  owatchAddAliveHandler.3.txt  owatchAddDataHandler.3  owatchAddDataHandler.3.txt  owatchAddMonitor.3  owatchAddMonitor.3.txt  owatchAddOpHandler.3  owatchAddOpHandler.3.txt  owatchCancelOp.3  owatchCancelOp.3.txt  owatchCommit.3  owatchCommit.3.txt  owatchCommitAt.3  owatchCommitAt.3.txt  owatchConnect.3  owatchConnect.3.txt  owatchConvertValue.3  owatchConvertValue.3.txt  owatchDetachOp.3  owatchDetachOp.3.txt  owatchDisconnect.3  owatchDisconnect.3.txt  owatchEnableMonitoring.3  owatchEnableMonitoring.3.txt  owatchExit.3  owatchExit.3.txt  owatchFlushAllMonitors.3  owatchFlushAllMonitors.3.txt  owatchFlushMonitor.3  owatchFlushMonitor.3.txt  owatchGetAlive.3  owatchGetAlive.3.txt  owatchGetAsyncTimeout.3  owatchGetAsyncTimeout.3.txt  (+65 more)
hub/: Makefile.am  hub-config.c  hub-data.c  hub-main.c  hub-monitor.c  hub-msg.c  hub-ooid.c  hub-priv.h  hub-proper.c  hub-subj.c  hub-subject.c  hub-util.c  hub-watch.c
include/: Makefile.am  config.h.in
include/optikus/: conf-mem.h  conf-net.h  getopt.h  ini.h  lang.h  log.h  subj.h  time.h  tree.h  types.h  util.h  watch.h
qforms/: Makefile.am  cmsg.dtd  cmsg.xml  ocbuttons.cpp  occlasses.cpp  occontrols.cpp  occustom.cpp  ocindicators.cpp  oclabels.cpp  ocmeters.cpp  ocranges.cpp  ocwidget.cpp  ocwidgets.cpp  ocwidgets.h  oqapp.cpp  oqcanvas.cpp  oqcanvas.h  oqcanvasview.cpp  oqcommon.cpp  oqcommon.h  oqdock.cpp  oqdock.h  oqecho.cpp  oqecho.h  oqedit.cpp  oqedit.h  oqforms.cpp  oqforms.h  oqlogs.cpp  oqlogs.h  oqmap.cpp  oqmap.h  oqmsg.cpp  oqmsg.h  oqpiclabel.cpp  oqpiclabel.h  oqscreens.cpp  oqscreens.h  oqsee.cpp  oqsee.h  (+2 more)
qforms/themes/simple/: qtrc
share/: Makefile.am
share/etc/: offnominals.lst  screens.lst
share/screens/: curve.osx  dials.osx  manometers.osx  offnom.osx  recycle.osx  root.osx  sensors.osx  service.osx  solar.osx  thermo.osx  time.osx  toggles.osx
share/scripts/: fail_1.ofn_off.opl  fail_1.ofn_on.opl  fail_2.ofn_off.opl  fail_2.ofn_on.opl  set_time.opl
subj/: Makefile.am  subj-log.c  subj-monitor.c  subj-msg.c  subj-network.c  subj-priv.h  subj-proper.c
test/: Makefile.am  ocommon.ini  ocontrol  odomain.ini  oscan  sample-echo.c  sample-script  sample-subject.c  test-common.ini  test-common.sh  test-domain.ini  test01-loglimit.c  test01-loglimit.sh  test02-a.ini  test02-b.ini  test02-ini.c  test02-ini.sh  test03-scan.sh  test04-see1.sh  test05-watch.c  test05-watch.sh  test06-watchas.c  test06-watchas.sh  test07-watchmsg.c  test07-watchmsg.sh  test08-subjmsg.c  test08-subjmsg.sh  test09-rlog.c  test09-rlog.sh  test10-stress1.c  test10-stress1.sh
util/: Makefile.am  ini-api.c  ini-field.c  ini-param.c  ini-parse.c  ini-priv.h  ini-source.c  ini-table.c  ini-util.c  ini2cache.pl  util-clocks.c  util-expand.c  util-getopt.c  util-log.c  util-pretty.c  util-string.c  util-time.c  util-tree.c
watch/: Makefile.am  watch-as.c  watch-convert.c  watch-info.c  watch-monitor.c  watch-msg.c  watch-network.c  watch-op.c  watch-priv.h  watch-proper.c  watch-subject.c
