
## Makefile.am -- Process this file with automake to produce Makefile.in

nobase_include_HEADERS = \
	optikus/types.h \
	optikus/util.h \
	optikus/log.h \
	optikus/getopt.h \
	optikus/ini.h \
	optikus/time.h \
	optikus/tree.h \
	optikus/lang.h \
	optikus/subj.h \
	optikus/watch.h

EXTRA_DIST = \
	optikus/conf-mem.h \
	optikus/conf-net.h

