
## Makefile.am -- Process this file with automake to produce Makefile.in

lib_LIBRARIES = liboutil.a

liboutil_a_SOURCES =	util-getopt.c util-time.c util-log.c util-pretty.c \
			util-expand.c util-string.c util-tree.c util-clocks.c \
			ini-util.c ini-param.c ini-source.c ini-parse.c \
			ini-field.c ini-api.c ini-table.c ini-priv.h

EXTRA_DIST = ini2cache.pl

